--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,61 +1,69 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="/stylesheets/profile.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-  </head>
+<% include ./partials/header.ejs %>
 
-  <body>
-    <div class="container-profile">
-      <div class="card-profile">
-        <div class="profile-picture">
-          <img
-            src="https://plus.unsplash.com/premium_photo-1670573802857-aeae2b087487?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt="Profile Picture"
-          />
-        </div>
-        <h2 class="name"><%= user.fullname %></h2>
-        <h3 class="username"><%= user.username %></h3>
-        <p class="tagline">
-          Lorem, ipsum dolor sit amet consectetur adipisicing.
-        </p>
-        <p class="description">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates?
-        </p>
-        <a href="/logout" class="button">Logout</a>
-        <form action="/upload" method="post" enctype="multipart/form-data">
-          <input type="text" name="postText" placeholder="Some caption" />
-          <input type="file" name="file" />
-          <input type="submit" value="upload" />
-        </form>
+<div class="profile w-full min-h-screen bg-zinc-800 text-white pt-1">
+  <form
+    id="uploadform"
+    hidden
+    action="/fileupload"
+    method="post"
+    enctype="multipart/form-data"
+  >
+    <input type="file" name="image" />
+  </form>
+  <div class="profile-details flex flex-col items-center mt-20">
+    <div class="relative">
+      <span
+        id="uploadicon"
+        class="w-8 h-8 cursor-pointer absolute bottom-0 right-0 rounded-full flex items-center justify-center bg-zinc-200"
+      >
+        <i class="ri-pencil-fill text-zinc-800"></i>
+      </span>
+      <div class="w-32 h-32 bg-zinc-200 rounded-full overflow-hidden">
+        <img
+          class="w-full h-full object-cover"
+          src="
+            https://i.pinimg.com/564x/23/96/8a/23968a02aa7aef9808f3a29bae8850e0.jpg"
+          alt=""
+        />
       </div>
     </div>
-    <div class="container margin">
-      <div class="cards">
-        <% user.posts.forEach(function(post) { %>
-
-        <div class="card" style="width: 18rem">
-          <img src="/images/uploads/<%= post.image %>" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title"><%= post.postText %></h5>
-          </div>
-        </div>
-        <% }) %>
+    <h1 class="text-3xl font-semibold mt-5">Harsh Sharma</h1>
+    <h3 class="text-md">@username</h3>
+    <a
+      href="/edit"
+      class="mt-2 px-7 py-2 bg-zinc-700 rounded-full text-xs font-semibold"
+      >Edit</a
+    >
+    <button
+      class="px-10 py-2 rounded-full text-xs font-semibold mt-3 bg-red-700"
+    >
+      Add New Post
+    </button>
+  </div>
+  <div class="cards flex flex-wrap gap-10 px-20 mt-10">
+    <div class="card">
+      <div class="w-52 h-40 bg-zinc-200 rounded-lg overflow-hidden">
+        <img
+          class="w-full h-full object-cover"
+          src="https://i.pinimg.com/736x/7a/e6/10/7ae610a41efc14a968de3cd513639ae1.jpg"
+          alt=""
+        />
       </div>
+      <h3 class="text-xl font-semibold mt-3">All Pins</h3>
+      <h5 class="text-sm opacity-50">28 pins</h5>
     </div>
+  </div>
+</div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html>
+<script>
+  document.querySelector("#uploadicon").addEventListener("click", function () {
+    document.querySelector("#uploadform input").click();
+  });
+
+  document
+    .querySelector("#uploadform input")
+    .addEventListener("change", function () {
+      document.querySelector("#uploadform").submit();
+    });
+</script>
+<% include ./partials/footer.ejs %>
