--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,5 +11,19 @@
     />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body></body>
-</html>
+  <body>
+    <% if(nav === true) {  %>
+      <div class="w-full px-10 items-center py-3 flex justify-between bg-zinc-800 text-white">
+        <h3>Pinterest</h3>
+        <div class="flex items-center gap-10">
+          <a href="/">Profile</a><a href="#">Feed</a
+          ><a class="px-3 py-2 bg-red-700 text-white rounded-md" href="/logout"
+            >Logout</a
+          >
+        </div>
+      </div>
+    <% }  %>
+
+  
+    
+  
