--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -21,36 +21,38 @@
       <div class="w-32 h-32 bg-zinc-200 rounded-full overflow-hidden">
         <img
           class="w-full h-full object-cover"
-          src="
-            https://i.pinimg.com/564x/23/96/8a/23968a02aa7aef9808f3a29bae8850e0.jpg"
+          src="/images/uploads/<%= user.profileImage %>"
           alt=""
         />
       </div>
     </div>
-    <h1 class="text-3xl font-semibold mt-5">Harsh Sharma</h1>
-    <h3 class="text-md">@username</h3>
+    <h1 class="text-3xl font-semibold mt-5"><%= user.username %></h1>
+    <h3 class="text-md"><%= user.email %></h3>
     <a
       href="/edit"
       class="mt-2 px-7 py-2 bg-zinc-700 rounded-full text-xs font-semibold"
       >Edit</a
     >
-    <button
+    <a
+      href="/add"
       class="px-10 py-2 rounded-full text-xs font-semibold mt-3 bg-red-700"
     >
       Add New Post
-    </button>
+    </a>
   </div>
   <div class="cards flex flex-wrap gap-10 px-20 mt-10">
     <div class="card">
       <div class="w-52 h-40 bg-zinc-200 rounded-lg overflow-hidden">
         <img
           class="w-full h-full object-cover"
-          src="https://i.pinimg.com/736x/7a/e6/10/7ae610a41efc14a968de3cd513639ae1.jpg"
+          src="/images/uploads/<%= user?.posts[0]?.image %>"
           alt=""
         />
       </div>
-      <h3 class="text-xl font-semibold mt-3">All Pins</h3>
-      <h5 class="text-sm opacity-50">28 pins</h5>
+      <a href="/show/posts" class="text-xl font-semibold mt-3 inline-block"
+        >Your Uploaded Pins</a
+      >
+      <h5 class="text-sm opacity-50"><%= user.posts.length %> pins</h5>
     </div>
   </div>
 </div>
