--- a/views/add.ejs
+++ b/views/add.ejs
@@ -1,7 +1,7 @@
 <% include ./partials/header.ejs %>
 
 <div class="w-full min-h-screen bg-zinc-800 px-10 py-5 text-white">
-  <h1 class="text-xl">Create a new post.</h1>
+  <h1 class="text-3xl mt-12 text-center">Create a new post.</h1>
   <hr class="opacity-10 mt-3" />
   <form action="/createpost" method="post" enctype="multipart/form-data">
     <input class="block w-1/3 px-3 py-2" type="file" name="postimage" />
