--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,6 +1,11 @@
 <% include ./partials/header.ejs %>
 
 <div class="w-full min-h-screen bg-zinc-800 px-10 py-8 text-white">
+  <div class="mt-10 w-full text-center mb-10">
+    <h1 class="text-5xl">Feed</h1>
+    <h6 class="text-sm text-zinc-500 pt-2">explore.</h6>
+    <hr class="opacity-10 mt-3" />
+  </div>
   <div class="cards flex flex-wrap gap-10">
     <% posts.forEach(function(elem) { %>
     <div class="card w-42">
