--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,18 +12,18 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <% if(nav === true) {  %>
-      <div class="w-full px-10 items-center py-3 flex justify-between bg-zinc-800 text-white">
-        <h3>Pinterest</h3>
-        <div class="flex items-center gap-10">
-          <a href="/">Profile</a><a href="#">Feed</a
-          ><a class="px-3 py-2 bg-red-700 text-white rounded-md" href="/logout"
-            >Logout</a
-          >
-        </div>
+    <% if(nav === true) { %>
+    <div
+      class="w-full px-10 items-center py-3 flex justify-between bg-zinc-800 text-white fixed"
+    >
+      <h3>Pinterest</h3>
+      <div class="flex items-center gap-10">
+        <a href="/profile">Profile</a><a href="/feed">Feed</a
+        ><a class="px-3 py-2 bg-red-700 text-white rounded-md" href="/logout"
+          >Logout</a
+        >
       </div>
-    <% }  %>
-
-  
-    
-  
+    </div>
+    <% } %>
+  </body>
+</html>
