--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,9 +1,13 @@
 <% include ./partials/header.ejs %>
 
 <div class="w-full min-h-screen bg-zinc-800 px-10 py-8 text-white">
+  <div class="mt-10 w-full text-center">
+    <h1 class="text-5xl">Your Posts</h1>
+    <hr class="opacity-10 mt-3 mb-10" />
+  </div>
   <div class="cards flex flex-wrap gap-10">
     <% user.posts.forEach(function(elem) { %>
-    <div class="card w-42">
+    <a href="/show/post/<%= elem._id %>" class="card w-42">
       <div class="w-full h-52 rounded-lg overflow-hidden">
         <img
           src="/images/uploads/<%=elem.image%>"
@@ -12,7 +16,7 @@
         />
       </div>
       <h5 class="mt-2 text-sm"><%= elem.title %></h5>
-    </div>
+    </a>
 
     <% }) %>
   </div>
